feat(init): Started levi plugin

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Leviathan Helper
+author=RuneWraith
+description=Highlights the leviathan when your max hit will proc the enrage phase.
+tags=leviathan,levi,dt2,desert,treasure,boss,helper,highlight,enrage,stun
+plugins=com.leviathan.LeviathanHelperPlugin
